Fixed and added multiple breakpoints for Previous Page; Fixed links for Upcoming Page

--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -80,7 +80,7 @@
 	        		<div class ="grid-col-10of10">
 					<div class = "grid-col-5of10">
 						<figure>
-		         				<a href="homepage.html">
+		         				<a href="#">
 		         					<img class= "information" src="img/chef5_test1.jpg" />
 					         			<figcaption class= "information hidden">
 					         				<p class="chef-name">Kathy</p>
@@ -93,7 +93,7 @@
 
 					<div class = "grid-col-5of10">
 						<figure>
-		         				<a href="homepage.html">
+		         				<a href="#">
 		         					<img class= "information" src="img/chef1.jpg"/>
 					         			<figcaption class= "information hidden">
 					         				<p class="chef-name">Jack</p>
@@ -108,7 +108,7 @@
 				<div class ="grid-col-10of10">
 					<div class = "grid-col-5of10">
 					<figure>
-		         				<a href="homepage.html">
+		         				<a href="#">
 		         					<img class= "information" src="img/chef_event.jpg" />
 					         			<figcaption class= "information">
 					         				<p class="chef-name">Amy</p>
@@ -121,7 +121,7 @@
 
 					<div class = "grid-col-5of10">
 						<figure>
-		         				<a href="homepage.html">
+		         				<a href="#">
 		         					<img class= "information" src="img/chef_event8.jpg"/>
 					         			<figcaption class= "information">
 					         				<p class="chef-name">Jun</p>
