--- a/Template_Structure/purchase_process2.html
+++ b/Template_Structure/purchase_process2.html
@@ -102,12 +102,12 @@
 	            				</div>
 
 	            				<div class ="grid-col-2of3"> 
-	            				    <input type="submit" class="submit-buttom" value="CONFIRM">
+	            				    <input type="submit" class="submit-buttom" onClick="location.href='purchase_process3.html'"value="CONFIRM">
 	            				</div>
 
 
 		            			<div class ="grid-col-2of3"> 
-		            				<input type="submit" class="cancel-buttom3" value="CANCEL">
+		            				<input type="submit" class="cancel-buttom3" onClick="location.href='purchase_process2.html'" value="CANCEL">
 		            			</div>
 					        </div>
 
