Updated details page, 2nd expanded page, and main.css layout structure

--- a/Template_Structure/details1.html
+++ b/Template_Structure/details1.html
@@ -81,9 +81,9 @@
 								<div class="cheflist leftAlign"> <!-- First column of grid in grid-->
             						<p class="title">Australian</p>
                                     <ul>
-                                        <li class="aboutList">Danny started cooking when he was 6</li>
-                                        <li class="aboutList">He's had a love for food and has always been the go-to for dinner parties amoungst the elites</li>
-                                        <li class="aboutList">He is currently writing a cookbook to share his passion with the world</li>
+                                        <li class="description">Danny started cooking when he was 6</li>
+                                        <li class="description">He's had a love for food and has always been the go-to for dinner parties amoungst the elites</li>
+                                        <li class="description">He is currently writing a cookbook to share his passion with the world</li>
                                     </ul>
             					</div>  <!-- Closing the first column of grid in grid-->
 
