--- a/Template_Structure/expanded_chef2.html
+++ b/Template_Structure/expanded_chef2.html
@@ -71,7 +71,7 @@
 	        	<div class = "grid-row">
 		            <div class = "grid-col-10of10">
 		            	<figure>
-      						<img class="chef-img-expanded" src="img/chef4.jpg" alt="chef"> 
+      						<img class="chef-img-expanded" src="img/chef1_expanded.jpg" alt="chef"> 
 		      					<figcaption class="chef-information-expanded">
 
 		      						<h2 class="chef-name-expanded">Pierre</h2>
