Fixed all validation errors for the about page, details, details1, homepage, previous

--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -24,13 +24,13 @@
 
                 <!--mobile hamburger nav: hidden when window larger than 400-->
 		                <div class= "grid-col-1of3-mobile-nav">
-							<a href="#top" class="nav-toggle hidden"><img src="img/hamburger_icon.png" height="19" width="20"alt="mobile_nav" /></a>
+							<a href="#top" class="nav-toggle hidden"><img src="img/hamburger_icon.png" height="19" width="20" alt="mobile_nav" /></a>
 					    </div>
 
 
 		                <div class= "grid-col-2of3-mobile-nav">
 							<a href="Homepage.html" class="nav-mobile hidden">
-                                <img src="img/logo.png"/>
+                                <img src="img/logo.png" alt="logo">
                             </a>
 						</div>
 				    	
@@ -41,7 +41,7 @@
    
 					        <div class = "grid-col-1of3"> 
 								<a class= "web-nav logo" href="Homepage.html">
-                                    <img src="img/logo.png"/>
+                                    <img src="img/logo.png" alt="logo">
                                 </a>
  							</div>
 
