--- a/Template_Structure/homepage.html
+++ b/Template_Structure/homepage.html
@@ -115,7 +115,7 @@
 		         	<div class = "grid-col-1of4">
 		         		
 		         		<figure>
-		         			<a href="expanded_chef2.html">
+		         			<a href="Expanded.html">
 		         				<img class = "chef-img" src="img/chef4_cropped1.jpg" alt="Chef">
 		         			</a>
 					         		<figcaption>
