--- a/Template_Structure/purchase_process4.html
+++ b/Template_Structure/purchase_process4.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<html lang="en">
-	<!--Lab D101 Claire Chen 301232556 Serena  -->
+	<!--Lab D101 Claire Chen 301232556 Serena 301138383-->
 		<head>
 
 			<meta charset="utf-8">
