update responsive purchase process: order summary

--- a/Template_Structure/purchase_process1.html
+++ b/Template_Structure/purchase_process1.html
@@ -102,12 +102,12 @@
 	              					<h4>Kate Chan</h4>
 	            				</div>  
 
-	            				<div class = "grid-col-4of10-placeholder4">
+	            				<div class = "grid-col-5of10-placeholder4">
 	            					<p></p>
 
 	            				</div>
 
-	            				<div class = "grid-col-1of8">
+	            				<div class = "grid-col-2of8">
 	            					<h4>Edited</h4>
 	            				</div>
 	            				</div>
@@ -124,21 +124,20 @@
 	              					<input type="text" class="fillarea" placeholder="Grapefruit Bowls" id="input-location">
 	            				</div>  
 
-								<div class = "grid-col-10of10 customer_name">
-            					<div class="grid-col-3of10">
-	              					<h4>Person2</h4>
+									<div class = "grid-col-10of10 customer_name">
+            					<div class="grid-col-3of10-customer_name">
+	              					<h4>John Yang</h4>
 	            				</div>  
 
-	            				<div class = "grid-col-4of10 placeholder4">
-	            					<p>placeholder</p>
+	            				<div class = "grid-col-5of10-placeholder4">
+	            					<p></p>
 
 	            				</div>
 
-	            				<div class = "grid-col-1of8">
+	            				<div class = "grid-col-2of8">
 	            					<h4>Edited</h4>
 	            				</div>
 	            				</div>
-
 	            				<div class="grid-col-8of10 customize-meal">
 	              					<input type="text" class="fillarea" placeholder="Coquilles Saint-Jacques" id="input-location">
 	            				</div>  
@@ -183,7 +182,7 @@
 	            			</div>
 	            				
 
-	            				<div class="grid-col-2of3 ">
+	            				<div class="grid-col-2of3-price ">
 	            					<p class ="total-price">TOTAL: $130</p>
 	            				</div>
 	            				
