Fixed all pages

--- a/Template_Structure/details.html
+++ b/Template_Structure/details.html
@@ -216,7 +216,7 @@
 			<footer>
 		
 					<div class="grid-row">
-   						
+   						   <div class ="grid-col-10of10">
 					        <div class = "grid-col-3of10"> 
 								<a class= "web-nav" target="_blank"  href="../Style_Guide/Style_guide.html">Style Guide</a>
  							</div>
@@ -230,6 +230,7 @@
 								<a class= "web-nav" target="_blank"  href="https://github.com/ClaireChen3758/P02_Company">Github</a>		
 				            </div>
 					</div>
+                </div>
 
 			</footer>
 
