--- a/Template_Structure/details1.html
+++ b/Template_Structure/details1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
     <html lang="en">
     <!--Lab D101 Claire Chen 301232556 Serena 301138383-->
 
@@ -220,7 +220,7 @@
 			<footer>
 		
 					<div class="grid-row">
-   						
+   						<div class ="grid-col-10of10">
 					        <div class = "grid-col-3of10"> 
 								<a class= "web-nav" target="_blank"  href="../Style_Guide/Style_guide.html">Style Guide</a>
  							</div>
@@ -233,6 +233,7 @@
 					        <div class = "grid-col-3of10">
 								<a class= "web-nav" target="_blank"  href="https://github.com/ClaireChen3758/P02_Company">Github</a>		
 				            </div>
+                        </div>
 					</div>
 
 			</footer>
