--- a/Template_Structure/expanded_chef2.html
+++ b/Template_Structure/expanded_chef2.html
@@ -87,7 +87,7 @@
 
 		      						<p class="available-time">June 12-18, 2016</p>
 
-										<input type="submit" class="book-buttom" onClick="location.href='details1.html'" value="LEARN MORE">           
+										<input type="submit" class="book-buttom" onClick="location.href='details.html'" value="LEARN MORE">           
 							            <input type="submit" class="book-buttom" onClick="location.href='homepage.html'" value="HOME">
 
 		      					</figcaption>
