--- a/Template_Structure/homepage.html
+++ b/Template_Structure/homepage.html
@@ -119,8 +119,8 @@
 		         				<img class = "chef-img" src="img/chef4_cropped1.jpg" alt="Chef">
 		         			</a>
 					         		<figcaption>
-					         				<p class="chef-name">Pierre</p>
-					         				<p class= "cuisine">French Cuisine</p>
+					         				<p class="chef-name">George</p>
+					         				<p class= "cuisine">American Cuisine</p>
 					         		</figcaption>	
 			         	</figure>
 
