Updated all files

--- a/Template_Structure/purchase_process1.html
+++ b/Template_Structure/purchase_process1.html
@@ -85,7 +85,7 @@
 	        			<div class="grid-row"> 
 	        						
 							<div class="grid-col-4of10-addcart chef-image-checkout"> 
-	             				<img src="img/chef4_small.jpg" height="96" width="89" alt="chef-image">	
+	             				<img src="img/chef_small.jpg" height="96" width="100" alt="chef-pierre">	
 	            			</div> 
 	            						
 	            			<!--restructure code: image should not put into list tag-->
