--- a/Template_Structure/purchase_process4.html
+++ b/Template_Structure/purchase_process4.html
@@ -89,7 +89,7 @@
 		          			<div class="grid-row">
 
 								<div class ="grid-col-3of10"> 
-			            			<input type="submit" class="cancel-buttom4" onClick="location.href='details.html'" value="BACK TO HOME">
+			            			<input type="submit" class="cancel-buttom4" onClick="location.href='homepage.html'" value="CONTINUE BROWSING">
 			            		</div>
 			            				
 							 </div>
