--- a/Template_Structure/purchase_process3.html
+++ b/Template_Structure/purchase_process3.html
@@ -69,7 +69,7 @@
 	      		</div> <!--Close second column: section 2 end-->
 
 <!--Second column of grid: Purchase section 2 -->
-	      		<div class="grid-col-4of10 purchase-item2">
+	      		<div class="grid-col-4of10">
 					
 
 	          				<div class="grid-row">
