--- a/Template_Structure/homepage.html
+++ b/Template_Structure/homepage.html
@@ -121,7 +121,7 @@
 		         	<div class = "grid-col-1of4">
 		         		
 		         			<figure>
-		         				<a href="Expanded.html">
+		         				<a href="expanded_chef2.html">
 		         					<img class = "chef-img" src="img/chef4_cropped1.jpg"/>
 					         			<figcaption>
 					         				<p class="chef-name">George</p>
