add other summary pages

--- a/Template_Structure/purchase.html
+++ b/Template_Structure/purchase.html
@@ -124,7 +124,7 @@
 								           	<h2>Danny</h2>
 								           	<p class = "cuisine-type-save">Australia Cuisine</p>
 								           	<img class = "calendar" src="img/calendar.png" height="30" width="30"/>
-								           	<input type="submit" class="default-buttom" value="Add to Cart">
+								           	<input type="submit" class="default-buttom" onClick="location.href='purchase_process1_ordersummary2.html'"value="Add to Cart">
 								        
 								</div> <!-- Closing the Fourth column -->
 
