--- a/Template_Structure/purchase_process3.html
+++ b/Template_Structure/purchase_process3.html
@@ -77,7 +77,7 @@
 
 		      						<div class="grid-col-2of3">
 		      							<p>Name on card</p>
-		              					<input type="text" class="textfield" placeholder="Kate Chan" id="input-location">
+		              					<input type="text" class="textfield" placeholder="" id="input-location">
 		            				</div>
 
 		            				<div class="grid-col-2of3">
