--- a/Template_Structure/expanded_chef2.html
+++ b/Template_Structure/expanded_chef2.html
@@ -1,6 +1,6 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 	<html lang="en">
-
+    <!--Lab D101 Claire Chen 301232556 Serena  -->
 		<head>
 
 			<meta charset="utf-8">
@@ -67,7 +67,7 @@
 					</nav>
 
 				</div>
-				
+
 	        	<div class = "grid-row">
 		            <div class = "grid-col-10of10">
 		            	<figure>
