main.css file validation check, fix errors, update javascript on each pages

--- a/Template_Structure/purchase_process4.html
+++ b/Template_Structure/purchase_process4.html
@@ -127,9 +127,8 @@
 
 			</footer>
 
-				<!--javascript for buttom animation-->
-			    <script src="js/jquery.js"></script>
-			    <script src="js/purchase.js"></script>
+			<script src="js/jquery.js"></script>
+		    <script src="js/menu.js"></script>
 
 	</body>
 	
