--- a/Template_Structure/purchase.html
+++ b/Template_Structure/purchase.html
@@ -196,7 +196,7 @@
 
 			<!--javascript for buttom animation-->
 		    <script src="js/jquery.js"></script>
-		    <script src="js/purchase.js"></script>
+		    <script src="js/menu.js"></script>
 
 		</body>
 	</html>
