--- a/Template_Structure/purchase_process3.html
+++ b/Template_Structure/purchase_process3.html
@@ -162,9 +162,8 @@
 
 				</footer>
 
-				<!--javascript for buttom animation-->
-			    <script src="js/jquery.js"></script>
-			    <script src="js/purchase.js"></script>
+			<script src="js/jquery.js"></script>
+		    <script src="js/menu.js"></script>
 
 		</body>
 </html>
