--- a/Style_Guide/Style_guide.html
+++ b/Style_Guide/Style_guide.html
@@ -93,7 +93,7 @@
               &lt;input type="text" class="textfield" placeholder="Superman" id="input-first-name"&gt;</code>
 
             <h4>Rendered element:</h4>
-          <p class="textfield-label">Name</p>
+            <label class="textfield-label" for="text-input-field">Name</label>
             <input type="text" class="textfield" placeholder="Superman" id="input-first-name">
       </section>
 
