--- a/Template_Structure/purchase_process1_ordersummary2.html
+++ b/Template_Structure/purchase_process1_ordersummary2.html
@@ -122,19 +122,19 @@
 
 		            		<div class="grid-col-8of10 customize-meal">
 
-		              			<input type="text" class="fillarea" placeholder="Chicken Noodle Soup" id="input-meal1">
+		              			<h5 class="cartMenu">Chicken Noodle Soup</h5>
 
 		            		</div>  
 
 							<div class="grid-col-8of10 customize-meal">
 
-		              			<input type="text" class="fillarea" placeholder="Kangaroo Burger" id="input-meal2">
+		              			<h5 class="cartMenu">Kangaroo Burger</h5>
 
 		            		</div>  
 
 		            		<div class="grid-col-8of10 customize-meal">
 
-		              			<input type="text" class="fillarea" placeholder="Poached Pears Shiraz" id="input-meal3">
+		              			<h5 class="cartMenu">Poached Pears Shiraz</h5>
 
 		            		</div>  
 
@@ -156,15 +156,15 @@
 		            		</div>
 		            				
 		            		<div class="grid-col-8of10 customize-meal">
-		              			<input type="text" class="fillarea" placeholder="Beach bar special" id="input-meal4">
+                                <h5 class="cartMenu">Beach bar special</h5>
 		            		</div>  
 
 							<div class="grid-col-8of10 customize-meal">
-		              			<input type="text" class="fillarea" placeholder="Sizzling Spare Ribs" id="input-meal5">
+		              			<h5 class="cartMenu">Sizzling Spare Ribs</h5>
 		            		</div>  
 
 		            		<div class="grid-col-8of10 customize-meal">
-		              			<input type="text" class="fillarea" placeholder="Poached Pears Shiraz" id="input-meal6">
+		              			<h5 class="cartMenu">Poached Pears Shiraz</h5>
 		            		</div> 
 
 		            		<div class ="grid-col-10of10 location-selected">
