--- a/Template_Structure/purchase_process2.html
+++ b/Template_Structure/purchase_process2.html
@@ -60,7 +60,7 @@
 						    	</div>
 
 						        <div class = "grid-col-1of3">
-									<a class= "web-nav" href="purchase.html">CART</a>		
+									<a class= "web-nav" href="purchase_process1.html">CART</a>		
 					            </div>
 
 						</div>
@@ -93,9 +93,9 @@
 		            		</div>
 
 		            		<div class="grid-col-2of3">
-		            			<p>Phone<p>
+		            			<p class="process2_phone">Phone<p>
 		              				
-		              				<input type="text" class="textfield" placeholder="" id="input-phone">
+		              				<input type="text" class="textfield" placeholder="xxx-xxx-xxxx" id="input-phone">
 		            		</div>
 
 		            		<div class="grid-col-2of3">
