--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -60,7 +60,7 @@
 						    	</div>
 
 						        <div class = "grid-col-1of3">
-									<a class= "web-nav" href="purchase.html">CART</a>		
+									<a class= "web-nav" href="purchase_process1.html">CART</a>		
 					            </div>
 
 						</div>
@@ -80,7 +80,9 @@
 
 		      						      <div class="help">
                                           
-                                              <img class= "like-the-chef" src="img/heart_outline.png" height="18" width="18" alt="like"/>
+                                              <a href="purchase.html">
+                                              <img class= "floatLeft like-the-chef" src="img/heart_outline.png" height="18" width="18" alt="like"/>
+                                          </a>
 
                                               <div class="helpText">Save for later!</div>
                                               
