--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -62,7 +62,7 @@
 					    	</div>
 
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="purchase.html">CART</a>		
+								<a class= "web-nav" href="purchase_process1.html">CART</a>		
 				            </div>
 
 					</div>
